feature: Add license status info to the CDS API
